bsc-backend-api/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bsc-backend-api
  labels:
    name: bsc-backend-api
