bsc-backend-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: badsound-counter-api
  namespace: bsc-backend-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: badsound-counter-api
  template:
    metadata:
      labels:
        app: badsound-counter-api
    spec:
      containers:
        - name: webserver
          image: 013969630346.dkr.ecr.ap-northeast-2.amazonaws.com/badsound-counter-api:4304ea4
          ports:
            - containerPort: 8080
