bsc-backend-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: badsound-counter-api
  namespace: bsc-backend-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 7007
      targetPort: 7007
      protocol: TCP
  selector:
    app: badsound-counter-api
