bsc-backend-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badsound-counter-api
  namespace: bsc-backend-api
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/group.name: "dsc-clsuter"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  tls:
    - hosts:
        - bsc.chuyong.kr
  rules:
    - host: "bsc.chuyong.kr"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: badsound-counter-api
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badsound-counter-api-ws
  namespace: bsc-backend-api
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/group.name: "dsc-clsuter"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
spec:
  tls:
    - hosts:
        - gateway.chuyong.kr
  rules:
    - host: "gateway.chuyong.kr"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: badsound-counter-api
                port:
                  number: 7007
