bsc-backend-api/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: badsound-counter-api
  namespace: bsc-backend-api
spec:
  hosts:
    - "bsc.chuyong.kr"
  gateways:
    - badsound-counter-api
  http:
    - name: "default-routes"
      route:
        - destination:
            host: badsound-counter-api
            port:
              number: 80
